--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<h1>Solartechnik-Neckar-Enz</h1>
 					<p>Herzlich Willkommen auf der Homepage</p>
 					<ul class="actions special">
-						<li><a href="#one" class="button scrolly">Erkunden</a></li>
+						<li><a href="#one" class="button scrolly"></a></li>
 					</ul>
 				</div>
 			</section>
