--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 		<!-- Footer -->
 			<section id="footer">
 				<ul class="copyright">
-					<li>&copy; Erstellt 2020 von <a href="https://andreas.eu">andreas.eu</a></li><li>Designvorlage von <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; Erstellt 2020</li><li>Designvorlage von <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</section>
 
